# Naman_capativePortel

./: .gitignore  sdkconfig  sdkconfig.old
.cache/clangd/index/: softap_sta.c.15E4F0ACA1B96EA5.idx
data/: index.html  login.html  msg.html  register.html  styles.css
main/: CMakeLists.txt  softap_sta.c
